Added content to workshop intro slides

--- a/workshop_intro.html
+++ b/workshop_intro.html
@@ -35,11 +35,68 @@ class: center, middle, inverse, title-slide
 
 # What is Reproducible Research?
 
+Reproducible research is ... 
 
 ---
 
-# What tools are available?
+# Reasons for reproducible research
+
+  1. 
+  1. 
+  1. 
+
+---
+
+
+# Tools
  
+
+---
+
+# Goals of the workshop
+
+
+---
+
+# Overview of the workshop
+
+| Time | Topic | Presenters |
+|------|-------|------------|
+| 9:00 - 9:15 | Introductions | |
+| 9:15 - 9:30 | Overview of workshop | Brad | 
+| 9:30 - 10:45 | [Introduction to git](intro_to_git.md) | Na-Rae |
+| **10:45 - 11:00** | **Break** | |
+| 11:00 - 12:30 | [Linking git and GitHub](linking_git_and_github.md) | Na-Rae, Brad |
+| **12:30 - 1:30** |  **Lunch** | |
+| 1:30 - 1:45 | RStudio with R demo  | Brad |
+| 1:45 - 2:00 | Jupyter Notebooks with Python demo  | Na-Rae |
+| 2:00 - 3:15 | Break out groups with RStudio and Jupyter Notebooks | |
+| 3:15 - 3:30 | Concluding remarks |Brad|
+
+
+---
+
+# Summary
+
+.pull-left[
+## What we're teaching...
+
+  1. git
+  1. GitHub
+  1. Jupyter Notebooks
+  1. RStudio
+]
+
+.pull-right[
+## What we're ***not*** teaching...
+  1. R
+  1. Python
+]
+---
+
+class: inverse, middle, center
+
+# Questions?
 
 ---
     </textarea>
